# grpc-fun

./: README.md  docker-compose.yaml
flight/: Dockerfile  config.py  main.py  pyproject.toml
flight/pb/: flight_pb2.py  flight_pb2_grpc.py
flight/protos/: flight.proto
flight/services/: flight.py
hotel/: Dockerfile  config.py  main.py  pyproject.toml
hotel/pb/: hotel_pb2.py  hotel_pb2_grpc.py
hotel/protos/: hotel.proto
hotel/services/: hotel.py
server/: Dockerfile  config.py  main.py  pyproject.toml
server/api/: router.py
server/api/dependencies/: __init__.py
server/api/dependencies/grpc/: flight.py  hotel.py
server/api/pb/: flight_pb2_grpc.py  hotel_pb2_grpc.py
server/api/routes/: bookings.py
server/repository/: __init__.py  booking_repository.py
server/schemas/: bookings.py
