[tool.poetry]
name = "flight"
version = "0.1.0"
description = ""
authors = ["kkaarroollm <mkarol.4514@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.62.2"
grpcio-tools = "^1.62.2"
grpc-interceptor = "^0.15.4"
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
